[gd_scene load_steps=10 format=3 uid="uid://b8upgdsvq3vqq"]

[ext_resource type="Script" path="res://scripts/component_gathering.gd" id="1_nuo2g"]
[ext_resource type="Theme" uid="uid://lrvuwqkgvays" path="res://themes/default_theme.tres" id="1_uek34"]
[ext_resource type="PackedScene" uid="uid://fy6kf443oqfk" path="res://scenes/scene_components/Actions.tscn" id="3_d54gi"]
[ext_resource type="PackedScene" uid="uid://cl7e1cuf1xe5w" path="res://scenes/scene_components/Resources.tscn" id="4_0muhp"]
[ext_resource type="PackedScene" uid="uid://my8ief4pn3u0" path="res://scenes/item_list.tscn" id="4_xkfhr"]
[ext_resource type="PackedScene" uid="uid://rl1wlgdywfpx" path="res://scenes/scene_components/ResourceRemover.tscn" id="5_wrxn5"]
[ext_resource type="AudioStream" uid="uid://bd2jvloyw3py8" path="res://music/SeeTheLight_Seva_Enhanced.mp3" id="7_06pfa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdf8s"]
bg_color = Color(0.6, 0.937255, 0.960784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tgud"]
bg_color = Color(0.929412, 0.717647, 0.392157, 1)

[node name="component_gathering" type="CanvasLayer"]
script = ExtResource("1_nuo2g")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.997
anchor_bottom = 0.988
offset_right = 11.4561
offset_bottom = 7.776
color = Color(0, 0.172549, 1, 1)

[node name="EnergyProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.028
anchor_top = 0.074
anchor_right = 0.25
anchor_bottom = 0.123
offset_left = -0.256001
offset_top = 0.0480003
offset_bottom = 0.295998
theme = ExtResource("1_uek34")
theme_override_styles/fill = SubResource("StyleBoxFlat_bdf8s")
show_percentage = false

[node name="Energy" type="Label" parent="EnergyProgress"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 75.0
theme = ExtResource("1_uek34")
theme_override_colors/font_color = Color(0, 0.792157, 0.835294, 1)
theme_override_colors/font_shadow_color = Color(0.388235, 1, 1, 0.152941)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "ENERGY: ---"
vertical_alignment = 1

[node name="Time_left" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.037
anchor_right = 0.667
anchor_bottom = 0.091
offset_left = 0.384003
offset_top = 0.0240002
offset_right = -0.384033
offset_bottom = 0.0319977
theme = ExtResource("1_uek34")
theme_override_colors/font_color = Color(1, 0.423529, 0.65098, 1)
theme_override_colors/font_shadow_color = Color(0.45098, 0, 0.00392157, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "TIME TILL NIGHT: ---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeightProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.074
anchor_right = 0.972
anchor_bottom = 0.123
offset_left = -6.10352e-05
offset_top = 0.0480003
offset_right = 0.255981
offset_bottom = 0.295998
theme = ExtResource("1_uek34")
theme_override_styles/fill = SubResource("StyleBoxFlat_7tgud")
show_percentage = false

[node name="Weight" type="Label" parent="WeightProgress"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 75.0
theme = ExtResource("1_uek34")
theme_override_colors/font_color = Color(0.945098, 0.619608, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.384314, 0, 0.309804)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "SPACE LEFT: ---"
vertical_alignment = 1

[node name="Actions" parent="." instance=ExtResource("3_d54gi")]
unique_name_in_owner = true
visible = false

[node name="Resources" parent="." instance=ExtResource("4_0muhp")]
anchor_left = 0.396
anchor_top = 0.111
anchor_right = 0.597
anchor_bottom = 0.173
offset_left = -48.192
offset_top = 0.071991
offset_right = -48.192
offset_bottom = 0.071991

[node name="ItemList" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.111
anchor_right = 0.646
anchor_bottom = 0.173
offset_left = 0.447937
offset_top = 0.071991
offset_right = -0.192017
offset_bottom = -0.104004
theme = ExtResource("1_uek34")
theme_override_font_sizes/font_size = 20
text = "ITEMS"

[node name="Continue" type="Button" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.389
anchor_top = 0.593
anchor_right = 0.611
anchor_bottom = 0.691
offset_left = -0.128021
offset_top = -0.264038
offset_right = 0.127991
offset_bottom = 0.231964
theme = ExtResource("1_uek34")
text = "CONTINUE"

[node name="ResourceRemover" parent="." instance=ExtResource("5_wrxn5")]
unique_name_in_owner = true
visible = false
offset_left = 112.0
offset_top = 168.0
offset_right = 208.512
offset_bottom = 229.696

[node name="item_list" parent="." instance=ExtResource("4_xkfhr")]
unique_name_in_owner = true
visible = false

[node name="NightApproaches" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 80.0
offset_top = 192.0
offset_right = 1070.0
offset_bottom = 319.0
theme = ExtResource("1_uek34")
text = "NO MORE ACTIONS"

[node name="Info" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 80.0
offset_top = 192.0
offset_right = 1070.0
offset_bottom = 319.0
theme = ExtResource("1_uek34")
text = "GATHER SUPPLIES"
horizontal_alignment = 1

[node name="Skip" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 968.0
offset_top = 592.0
offset_right = 1136.0
offset_bottom = 624.0
theme = ExtResource("1_uek34")
theme_override_font_sizes/font_size = 20
text = "SKIP PHASE"

[node name="Label" type="Label" parent="Skip"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 135.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 10
text = "NOT RECOMMENDED"

[node name="StartGathering" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 440.0
offset_top = 384.0
offset_right = 712.0
offset_bottom = 448.0
theme = ExtResource("1_uek34")
text = "START"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_06pfa")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="ItemList" to="." method="_on_item_list_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
[connection signal="pressed" from="StartGathering" to="." method="_on_start_gathering_pressed"]
